--- a/templates/busca.html
+++ b/templates/busca.html
@@ -12,12 +12,35 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js"></script>
     <!-- Adicione o link para o Bootstrap JS -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
+
+    <style>
+        body {
+            background-color: #f8f9fa;
+        }
+
+        .container {
+            background-color: #ffffff;
+            border-radius: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            padding: 20px;
+            margin-top: 50px;
+        }
+
+        h2 {
+            color: #007bff;
+        }
+
+        button {
+            margin-top: 20px;
+        }
+    </style>
 </head>
 <body>
 
 <div class="container mt-4">
-    <h2>Formulário de Busca</h2>
-    <form id="searchForm" action="/buscar">
+    <h2 class="text-center mb-4">Formulário de Busca</h2>
+    <!-- Adicione o formulário Flask com a ação apontando para a rota '/busca' -->
+    <form id="searchForm" method="post" action="/busca">
         <div class="form-row">
             <div class="form-group col-md-4">
                 <label for="inputData">Data</label>
@@ -25,7 +48,7 @@
             </div>
             <div class="form-group col-md-4">
                 <label for="inputNome">Nome do Aluno</label>
-                <input type="text" class="form-control" id="inputNome" name="nome">
+                <input type="text" class="form-control" id="inputNome" name="nome_aluno">
             </div>
             <div class="form-group col-md-4">
                 <label for="inputStatus1">Status 1</label>
@@ -46,27 +69,31 @@
                 <input type="text" class="form-control" id="inputAtendidoPor" name="atendidoPor">
             </div>
         </div>
-        <button type="button" class="btn btn-primary" onclick="buscar()">Buscar</button>
+        <div class="form-row">
+            <div class="form-group col-md-4">
+                <label for="SerieAno">Serie(Ano)</label>
+                <input type="text" class="form-control" id="SerieAno" name="serie">
+            </div>
+            <div class="form-group col-md-4">
+                <label for="Turma">Turma</label>
+                <input type="text" class="form-control" id="Turma" name="turma">
+            </div>
+        </div>
+        <div class="form-group text-center">
+            <!-- Mude o tipo de botão para 'submit' para enviar o formulário -->
+            <button type="submit" class="btn btn-primary">Buscar</button>
+        </div>
     </form>
 
     <!-- Onde você exibirá os resultados da busca -->
     <div id="resultados" class="mt-4">
         <!-- Os resultados da busca serão exibidos aqui -->
+        {% if ocorrencias %}
+        <li>Aluno : {{ocorrencias[0][3]}}</li><br>
+        Ocorrencia : {{ocorrencias[0][8]}}
+        {% endif %}
     </div>
 </div>
-
-<script>
-    function buscar() {
-        // Aqui você pode implementar a lógica de busca usando os valores dos campos do formulário
-        // Por exemplo, você pode usar JavaScript para enviar uma solicitação AJAX ao servidor
-        // e obter os resultados da busca.
-        // Depois, exiba os resultados na área designada, como a div com id "resultados".
-        // Por enquanto, vamos apenas exibir uma mensagem de exemplo.
-
-        var resultadosDiv = document.getElementById('resultados');
-        resultadosDiv.innerHTML = '<p>Resultados da busca serão exibidos aqui.</p>';
-    }
-</script>
 
 </body>
 </html>
