--- a/templates/form_ocorrencia.html
+++ b/templates/form_ocorrencia.html
@@ -36,6 +36,7 @@
     <div class="form-group">
       <label for="turma">Turma:</label>
       <select class="form-control" name="turma" required>
+        <option value=""></option>
         <option value="A">A</option>
         <option value="B">B</option>
         <option value="C">C</option>
@@ -57,6 +58,7 @@
     <div class="form-group">
       <label for="materia">Matéria:</label>
       <select class="form-control" name="materia" required>
+        <option value=""></option>
         <option value="Portugues">Português</option>
         <option value="Matematica">Matemática</option>
         <option value="Ciencias">Ciências</option>
@@ -84,6 +86,7 @@
     <div class="form-group">
       <label for="status1">Status 1:</label>
       <select class="form-control" name="status1" required>
+        <option value=""></option>
         <option value="Concluido">Concluído</option>
         <option value="CT">CT</option>
         <option value="Pendente">Pendente</option>
@@ -101,6 +104,7 @@
     <div class="form-group">
       <label for="status2">Status 2:</label>
       <select class="form-control" name="status2" required>
+        <option value=""></option>
         <option value="Resolvido">Resolvido</option>
         <option value="Pendente">Pendente</option>
       </select>
