--- a/templates/form_ocorrencia.html
+++ b/templates/form_ocorrencia.html
@@ -54,6 +54,10 @@
       <label for="nomeProf">Nome do Professor:</label>
       <input type="text" class="form-control" name="nomeProf" required>
     </div>
+    <div class="form-group">
+      <label for="Atendido_por">Atendido por:</label>
+      <input type="text" class="form-control" name="Atendido_por" required>
+    </div>
 
     <div class="form-group">
       <label for="materia">Matéria:</label>
@@ -125,7 +129,10 @@
       <label for="responsavel">Responsável (Tel):</label>
       <input type="text" class="form-control" name="responsavel" id="telefone">
   </div>
-   
+  <div class="form-group">
+    <label for="Endereço responsavel">Endereço responsavel</label>
+    <input type="text" class="form-control" name="end_res" id="end_res">
+</div>
 
     <!-- Botão de envio -->
     <button type="submit" class="btn btn-primary"  >Enviar Ocorrência</button>
