--- a/templates/index.html
+++ b/templates/index.html
@@ -1,21 +1,29 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
+    <!-- Metatags para conjunto de caracteres e viewport -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    
+    <!-- Título da página -->
     <title>Ocorrência Escolar</title>
+    
+    <!-- Link para a folha de estilo externa -->
     <link rel="stylesheet" href="/static/style/index_style.css">
 </head>
 <body>
+    <!-- Seção de cabeçalho -->
     <header>
         <div class="menu">
+            <!-- Links de navegação -->
             <a href="/ocorrencia">Ocorrência</a>
             <a href="/busca">Pesquisa</a>
         </div>
     </header>
     
-    <!-- Contêiner da imagem -->
+    <!-- Seção do contêiner de imagem -->
     <div class="image-container">
+        <!-- Imagem com descrição alternativa -->
         <img src="/static/img/gr.jpg" alt="Descrição da imagem">
     </div>
 </body>
