--- a/templates/form_ocorrencia.html
+++ b/templates/form_ocorrencia.html
@@ -127,11 +127,15 @@
 
     <div class="form-group">
       <label for="responsavel">Responsável (Tel):</label>
-      <input type="text" class="form-control" name="responsavel" id="telefone">
+      <input type="tel" class="form-control" name="responsavel" id="telefone">
   </div>
   <div class="form-group">
     <label for="Endereço responsavel">Endereço responsavel</label>
     <input type="text" class="form-control" name="end_res" id="end_res">
+</div>
+<div class="form-group">
+  <label for="Email responsavel">Email responsavel</label>
+  <input type="email" class="form-control" name="email" id="email">
 </div>
 
     <!-- Botão de envio -->
