Adicionei o 'campo atendido por' e esta funcionando!

--- a/templates/form_ocorrencia.html
+++ b/templates/form_ocorrencia.html
@@ -126,15 +126,15 @@
     </div>
 
     <div class="form-group">
-      <label for="responsavel">Responsável (Tel):</label>
+      <label for="responsavel">Responsável (Tel): que Atendeu a Ocorrência</label>
       <input type="tel" class="form-control" name="responsavel" id="telefone">
   </div>
   <div class="form-group">
-    <label for="Endereço responsavel">Endereço responsavel</label>
+    <label for="Endereço responsavel">Endereço Aluno</label>
     <input type="text" class="form-control" name="end_res" id="end_res">
 </div>
 <div class="form-group">
-  <label for="Email responsavel">Email responsavel</label>
+  <label for="Email responsavel">Email pais ou responsável</label>
   <input type="email" class="form-control" name="email" id="email">
 </div>
 
