--- a/templates/index.html
+++ b/templates/index.html
@@ -18,6 +18,7 @@
             <!-- Links de navegação -->
             <a href="/ocorrencia">Ocorrência</a>
             <a href="/busca">Pesquisa</a>
+            <a href="https://sed.educacao.sp.gov.br/" target="_blank">SED</a>
         </div>
     </header>
     
@@ -26,5 +27,6 @@
         <!-- Imagem com descrição alternativa -->
         <img src="/static/img/gr.jpg" alt="Descrição da imagem">
     </div>
+    
 </body>
 </html>
