--- a/templates/busca.html
+++ b/templates/busca.html
@@ -60,7 +60,7 @@
                 </div>
                 <div class="form-group col-md-4">
                     <label for="inputAtendidoPor">Atendido por</label>
-                    <input type="text" class="form-control" id="inputAtendidoPor" name="nome_prof">
+                    <input type="text" class="form-control" id="inputAtendidoPor" name="Atendido_por">
                 </div>
             </div>
             <div class="form-row">
@@ -117,6 +117,7 @@
                                 <strong>Tel:Responsavel:</strong> {{ocorrencias[i][14]}}<br>
                                 <strong>Professor:</strong> {{ocorrencias[i][6]}}<br>
                                 <strong>Endereço:</strong> {{ocorrencias[i][15]}}<br>
+                                <strong>Atendido_por: </strong>{{ocorrencias[i][17]}}
                                 <div><strong>Ocorrência:</strong></div>
                                 <textarea class="form-control" rows="4" cols="50" readonly>{{ocorrencias[i][8]}}</textarea>
                                 <!-- <strong>destinatario:</strong>{{ocorrencias[i][16]}} -->
@@ -200,7 +201,8 @@
                         professor: '{{ocorrencias[i][6]}}',
                         endereco: '{{ocorrencias[i][15]}}',
                         ocorrencia: '{{ocorrencias[i][8]}}',
-                        email:'{{ocorrencias[i][16]}}'
+                        email:'{{ocorrencias[i][16]}}',
+                        atendido_por:'{{ocorrencias[i][17]}}'
                     };
                     JSON.stringify({% endfor %})
                     dados.push(ocorrencia);
