--- a/templates/busca.html
+++ b/templates/busca.html
@@ -111,12 +111,8 @@
                                 <strong>Data:</strong> {{ocorrencias[i][1]}}<br>
                                 <strong>Horário:</strong> {{ocorrencias[i][2]}}<br>
                                 <strong>Aluno:</strong> {{ocorrencias[i][3]}}<br>
-                                <strong>ATA:</strong> {{ocorrencias[i][12]}}<br>
+                                <strong>Ano/Série:</strong> {{ocorrencias[i][5]}}ª<br>
                                 <strong>Turma:</strong> {{ocorrencias[i][4]}}<br>
-                                <strong>Série:</strong> {{ocorrencias[i][5]}}<br>
-                                <strong>Tel:Responsavel:</strong> {{ocorrencias[i][14]}}<br>
-                                <strong>Professor:</strong> {{ocorrencias[i][6]}}<br>
-                                <strong>Endereço:</strong> {{ocorrencias[i][15]}}<br>
                                 <strong>Atendido_por: </strong>{{ocorrencias[i][17]}}
                                 <div><strong>Ocorrência:</strong></div>
                                 <textarea class="form-control" rows="4" cols="50" readonly>{{ocorrencias[i][8]}}</textarea>
