Mudança no login

--- a/templates/form_ocorrencia.html
+++ b/templates/form_ocorrencia.html
@@ -140,7 +140,7 @@
 
     <!-- Botão de envio -->
     <button type="submit" class="btn btn-primary"  >Enviar Ocorrência</button>
-    <a class="btv2"  href="/">Voltar</a>
+    <a class="btv2"  href="/plincipal">Voltar</a>
   </form>
 </div>
 
