--- a/templates/busca.html
+++ b/templates/busca.html
@@ -15,6 +15,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
      <!-- Link para a folha de estilo externa -->
      <link rel="stylesheet" href="/static/style/busca_style.css">
+     
 
 </head>
 
@@ -94,7 +95,7 @@
                 <!-- Mude o tipo de botão para 'submit' para enviar o formulário -->
                 <button type="submit" class="btn btn-primary">Buscar</button>
                 <!-- Adicione o botão "Voltar" -->
-                <a class="btv"  href="/">Voltar</a>
+                <a class="btv"  href="/plincipal">Voltar</a>
             </div>
             
         </form>
